--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "author": "Xvezda <xvezda@naver.com>",
   "license": "MIT",
   "private": true,
+  "scripts": {
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run"
+  },
   "devDependencies": {
     "cypress": "8.7.0",
     "typescript": "^4.7.4"
